created a complete html css portfolio updated one

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
         <h2>VM</h2>
         <nav>
-            <a>Github</a>
-            <a>Linkedin</a>
+            <a  target="_blank" href="https://github.com/Vidhyamahendran19">Github</a>
+            <a target="_blank" href="https://www.linkedin.com/in/vidhya-mahendran19/">Linkedin</a>
         </nav>
     </header>
     <main>
@@ -30,32 +30,88 @@
             </div>
             <div class="stats">
                 <div>
-                    <i class="fa-solid fa-star"></i>
-                   <p class="darkerText">Front-End Developer with a passion for clean code and bold design.
+                    <div>
+                    <i class="fa-solid fa-star"></i></div>
+                   <p class="darkerText">Front-End Developer with a passion of clean code & bold design.
 </p> 
                 </div>
                 <div>
-                    <i class="fa-solid fa-desktop"></i>
+                    <div> <i class="fa-solid fa-desktop"></i>
+</div>
                    <p class="darkerText">I build responsive, accessible, and user-first web experiences.
 </p> 
                 </div>
                 <div>
+                    <div>
                     <i class="fa-solid fa-arrow-trend-up"></i>
+                    </div>
                    <p class="darkerText">Where creativity meets functionality—that’s my space.
 </p> 
                 </div>
             </div>
         </div>
-        <div>
-            <a>
-                <p>Email me</p>
+        <p class="about-me">I'm a frontend developer with a strong grasp of HTML5, CSS3, JavaScript (ES6+), and React.js, focused on building accessible, responsive, and high-performing web interfaces. I use Tailwind CSS for fast, consistent UI styling and manage projects confidently with Git and GitHub. My work blends clean code with thoughtful design, integrating REST APIs to create dynamic, user-driven applications. I also bring a creative edge with Canva and a solid understanding of responsive design. Self-taught and solution-oriented, I thrive on turning ideas into seamless digital experiences.
+</p>
+        <div >
+            <a class="outreach">
+                <i class="fa-solid fa-arrow-right"></i>
+                <p>Email me- Vidhyamahendran19@gmail.com</p>
             </a>
         </div>
         </section>
-        <section>
-            <p>Latest Projects</p>
-            <div>
+        <section class="projectContainer">
+            <p class="darkerText headerText">Latest Projects<p>
+            <div class="projectItem">
+<div>
+    <p>Hoodie Website - A sleek hoodie shop built for modern fashion lovers—with responsive design and smooth user experience.
 
+</p>
+  <div class="link-container">
+    <a target="_blank" href="https://github.com/Vidhyamahendran19/Hoodie-Website" class="linkitem">
+        <i class="fa-brands fa-github"></i>
+                    </div>
+                   <p class="darkerText">GitHub</p> 
+                </div>
+            </a>
+                    <div>
+
+</div>
+<div>
+    <img src="img/img1.png" alt="projectimg"/>
+</div>
+            </div>
+            <div class="projectItem">
+<div>
+    <p>Coffee Website - A responsive coffee website designed with clean HTML and elegant CSS styling—simple, smooth, and scroll-worthy.
+</p> <div class="link-container">
+    <a target="_blank" href="https://github.com/Vidhyamahendran19/HTML-and-CSS-projects-List/tree/master/Coffee%20Landing%20Page" class="linkitem">
+        <i class="fa-brands fa-github"></i>
+                    </div>
+                   <p class="darkerText">GitHub</p> 
+                </div>
+            </a>
+                    <div>
+
+</div>
+<div>
+    <img src="img/img2.png" alt="projectimg"/>
+</div>
+            </div>
+            <div class="projectItem">
+<div>
+    <p>Branding Clothes Website - A fashion-forward brand site developed using HTML and Tailwind CSS—balancing elegance with performance.</p>
+     <div class="link-container">
+    <a target="_blank" href="https://github.com/Vidhyamahendran19/HTML-and-CSS-projects-List/commit/ee8056d6462c959b7610a219b6ce7542a3229d93#diff-3041c21f0fd518431a4647cf2e758f56f9ed630e3faf14583ef1457c1584e1d7" class="linkitem">
+        <i class="fa-brands fa-github"></i>
+                    </div>
+                   <p class="darkerText">GitHub</p> 
+                </div>
+            </a>
+                    <div>
+</div>
+<div>
+    <img src="img/img3.png" alt="projectimg"/>
+</div>
             </div>
         </section>
     </main>
